syntax = "proto3";

// Package declaration, for non-java implementations
package brabocoin;

import "org/brabocoin/brabocoin/Model.proto";

// Java package destination for generated classes
option java_package = "org.brabocoin.brabocoin.proto.dal";
option java_outer_classname = "BrabocoinStorageProtos";


message BlockInfo {
    Hash previousBlockHash = 1;
    Hash merkleRoot = 2;
    Hash targetValue = 3;
    bytes nonce = 4;
    int32 blockHeight = 5;
    int32 transactionCount = 6;
    bool valid = 7;
    int64 timeReceived = 8;
    int32 fileNumber = 9;
    int32 offsetInFile = 10;
    int32 sizeInFile = 11;
    int32 offsetInUndoFile = 12;
    int32 sizeInUndoFile = 13;
}

message BlockFileInfo {
    int32 numberOfBlocks = 1;
    int32 size = 2;
    int32 lowestBlockHeight = 3;
    int32 highestBlockHeight = 4;
}

message UnspentOutputInfo {
    bool coinbase = 1;
    int32 blockHeight = 2;
    int64 amount = 3;
    Hash address = 4;
}

message TransactionUndo {
    repeated UnspentOutputInfo outputInfoList = 1;
}

message BlockUndo {
    repeated TransactionUndo transactionUndos = 1;
}
